--- a/pipe/coin/core/setting/urls.conf
+++ b/pipe/coin/core/setting/urls.conf
@@ -4,6 +4,11 @@ BITHUMB= https://api.bithumb.com/public
 KORBIT=https://api.korbit.co.kr/v1
 COINONE=https://api.coinone.co.kr/public/v2
 
+[SOCKETURL]
+UPBIT=wss://api.upbit.com/websocket/v1
+BITHUMB=wss://pubwss.bithumb.com/pub/ws
+KORBIT=wss://ws.korbit.co.kr/v1/user/push
+COINONE=wss://stream.coinone.co.kr
 
 [TOPICNAME]
 BTC_TOPIC_NAME=btcRestDataInTotal
