--- a/.gitignore
+++ b/.gitignore
@@ -161,3 +161,5 @@ cython_debug/
 kafka-docker/.kafkalogging/kafka
 kafka-docker/.kafkalogging/zookeeper
 pipe/core/coin/data
+pipe/coin/core/data_mq/mq_logging
+.vscode
