--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
 requests
 pandas
 numpy
-scikit-learn
-pyspark==3.3.0
 confluent-kafka
 uvicorn
 fastapi
@@ -11,4 +9,4 @@ websocket
 websocket-client
 aiokafka
 jinja2
-uvicorn[standard]
+aiologger
