--- a/pipe/coin/core/setting/urls.conf
+++ b/pipe/coin/core/setting/urls.conf
@@ -26,3 +26,12 @@ COINONE_BTC_REAL_TOPIC_NAME=btcSocketDataInCoinone
 [AVERAGETOPICNAME]
 BTC_AVERAGE_TOPIC_NAME=averagebtc
 ETHER_AVERAGE_TOPIC_NAME=averageeth
+
+
+
+[KAFKA]
+bootstrap_servers=kafka1:19092,kafka2:29092,kafka3:39092
+security_protocol=PLAINTEXT
+max_batch_size=16384
+max_request_size=7000
+acks=all
